--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="./dom.js"></script>
 <body>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
-    <div class="container">
+    <div class="container" id="head">
       <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
     </div>
   </header>
@@ -23,12 +23,12 @@
     </form>
     <h2 class="title">Items</h2>
     <ul id="items" class="list-group">
-      <li class="list-group-item">Item 1</li>
-      <li class="list-group-item">Item 2</li>
-      <li class="list-group-item">Item 3</li>
-      <li class="list-group-item">Item 4</li>
-      <li>Item 5</li>
+      <li class="list-group-item">Item 1</li><li
+       class="list-group-item">Item 2</li><li
+      class="list-group-item">Item 3</li><li
+     class="list-group-item">Item 4</li>
     </ul>
+    <span></span>
    </div>
   </div>
 
